--- a/app/globals.css
+++ b/app/globals.css
@@ -21,8 +21,6 @@ body {
   font-size: 1.2rem;
   margin: 0;
   padding: 0;
-  width: 100%;
-  height: 100%;
 }
 
 h1 {
@@ -38,6 +36,7 @@ h1 {
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
   background-clip: text;
+  filter: drop-shadow(0px 0px 10px #aaaaaa);
 }
 
 @keyframes infiniteScroll {
@@ -48,4 +47,16 @@ h1 {
   to {
       background-position-x: 900%;
   }
+}
+
+.bgBlack {
+  background-image: linear-gradient(144deg, 
+    theme('colors.tblack.800'), theme('colors.tblack.950'), 
+    theme('colors.tblack.800') 50%, theme('colors.tblack.950'));
+}
+
+.bgTeal {
+  background-image: linear-gradient(144deg, 
+    theme('colors.teal.600'), theme('colors.teal.600'), 
+    theme('colors.teal.500') 50%, theme('colors.teal.700'));
 }
