--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,10 +1,9 @@
 .title {
-    @apply justify-center align-middle h-full flex bg-no-repeat relative px-[8vh];
+    @apply justify-center align-middle h-full flex bg-no-repeat relative px-[8vh] text-center;
     font-size: 15rem;
     animation: revealTitle 0.8s ease-in-out forwards;
     animation-delay: 500ms;
     line-height: 1.4;
-    text-align: center;
 
     background: url('/image/background2.jpg') 50% 50%;
     -webkit-text-fill-color: transparent;
@@ -29,26 +28,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-.content1 {
-    @apply bgBlack;
-}
-
-.content2 {
-    @apply bgTeal;
-}
-
-.bgBlack {
-    background-image: linear-gradient(144deg, 
-      theme('colors.tblack.800'), theme('colors.tblack.950'), 
-      theme('colors.tblack.800') 50%, theme('colors.tblack.950'));
-}
-
-.bgTeal {
-    background-image: linear-gradient(144deg, 
-      theme('colors.teal.600'), theme('colors.teal.600'), 
-      theme('colors.teal.500') 50%, theme('colors.teal.700'));
 }
 
 .projectFrames {
